src/test/ui-fulldeps/gated-plugin.stderr
error[E0658]: compiler plugins are deprecated
  --> $DIR/gated-plugin.rs:3:1
   |
LL | #![plugin(attr_plugin_test)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/29597
   = help: add `#![feature(plugin)]` to the crate attributes to enable

warning: use of deprecated attribute `plugin`: compiler plugins are deprecated. See https://github.com/rust-lang/rust/issues/29597
  --> $DIR/gated-plugin.rs:3:1
   |
LL | #![plugin(attr_plugin_test)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: remove this attribute
   |
   = note: `#[warn(deprecated)]` on by default

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
